--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,15 @@
 }
 
 .title_container {
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
     padding-left: 40px;
     flex: 1;
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
 
 .house {
@@ -32,4 +36,20 @@
     width: 100%;
     height: 100vh;
     flex-direction: column;
+}
+
+.back_button {
+    background-color: transparent;
+    border: 2px solid transparent;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    transition: border 0.25s;
+    font-size: large;
+    font-weight: bold;
+}
+
+.back_button:hover , :focus {
+    border: 2px solid white;
 }
