--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,15 @@
   src: url("./assets/SUIT-Variable.ttf") format('truetype');
 }
 
+@font-face {
+  font-family: 'S-CoreDream';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
-  font-family: "SUIT";
+  font-family: "S-CoreDream";
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,7 +23,7 @@
 }
 
 body {
-  font-family: "SUIT";
+  font-family: "S-CoreDream";
   height: 100%;
   width: 100%;
   overflow: hidden;
