--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
 
+.button :active {
+    transform: scale(0.95);
+}
+
 .title_container {
     justify-content: flex-start;
     align-items: center;
@@ -45,11 +49,12 @@
     width: 60px;
     height: 60px;
     cursor: pointer;
-    transition: border 0.25s;
+    transition: border 0.25s, transform 0.25s;
     font-size: large;
     font-weight: bold;
 }
 
 .back_button:hover , :focus {
     border: 2px solid white;
+    transform: scale(1.05);
 }
