--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -64,3 +64,47 @@ h2 {
 .additional_description_span {
     color: rgba(100 , 100, 100, 1);
 }
+
+/* 모바일 화면에 대한 스타일 */
+@media (max-width: 768px) {
+    .contenta_container {
+        width: 90%;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        gap: 1.5em;
+        padding: 1em;
+    }
+
+    .about_inner_container {
+        font-size: 18px;
+        width: 100%;
+    }
+
+    .start_button {
+        font-size: 16px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .contenta_container {
+        gap: 1em;
+        padding: 0.5em;
+    }
+
+    .about_inner_container {
+        font-size: 16px;
+    }
+
+    .start_button {
+        font-size: 14px;
+        padding: 0.5em;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+}
