--- a/src/styles/DescriptionPage.css
+++ b/src/styles/DescriptionPage.css
@@ -5,6 +5,7 @@
 }
 
 .description {
-    overflow-y: scroll;
-    overflow-x: hidden;
+    height: 100vh; /* Ensure it takes full viewport height */
+    overflow-y: scroll; /* Allow vertical scrolling */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
