--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .button {
-    font-family: "SUIT";
+    font-family: "S-CoreDream";
     cursor: pointer;
     background-color: rgba(22, 22, 22, 1) ;
     border: 2px solid transparent;
