--- a/src/styles/DescriptionPage.css
+++ b/src/styles/DescriptionPage.css
@@ -9,3 +9,48 @@
     overflow-y: scroll; /* Allow vertical scrolling */
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+
+.nexta_container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.next_button {
+    font-family: "S-CoreDream";
+    cursor: pointer;
+    background-color: rgba(22, 22, 22, 1) ;
+    border: 2px solid transparent;
+    border-radius: 100px;
+    width: 90%;
+    padding: 0.3em 0.6em;
+    font-size: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.25s, background-color 0.25s, border 0.25s, box-shadow 0.25s;
+}
+
+.next_button:hover {
+    transform: scale(1.05);
+    background-color: rgb(87, 87, 87);
+    border: 2px solid white;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+}
+
+.next_button :active {
+    transform: scale(0.95);
+}
+
+.button {
+    font-family: "S-CoreDream";
+    cursor: pointer;
+    background-color: rgba(22, 22, 22, 1) ;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    padding: 0.6em 1.2em;
+    transition: transform 0.25s, background-color 0.25s, border 0.25s, box-shadow 0.25s;
+    font-size: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
